--- a/main.css
+++ b/main.css
@@ -1,10 +1,12 @@
 :root{
     /* my variables */
+    --gradient: linear-gradient(45.34deg, #EA52F8 5.66%, #0066FF 94.35%);
+    --yo:background:linear-gradient(45deg, rgba(188, 164, 6, 0.5) 0%, rgba(188, 164, 6, 0.5) 12.5%,rgba(165, 158, 18, 0.5) 12.5%, rgba(165, 158, 18, 0.5) 25%,rgba(142, 152, 31, 0.5) 25%, rgba(142, 152, 31, 0.5) 37.5%,rgba(119, 146, 43, 0.5) 37.5%, rgba(119, 146, 43, 0.5) 50%,rgba(96, 140, 56, 0.5) 50%, rgba(96, 140, 56, 0.5) 62.5%,rgba(73, 134, 68, 0.5) 62.5%, rgba(73, 134, 68, 0.5) 75%,rgba(50, 128, 81, 0.5) 75%, rgba(50, 128, 81, 0.5) 87.5%,rgba(27, 122, 93, 0.5) 87.5%, rgba(27, 122, 93, 0.5) 100%),linear-gradient(135deg, rgb(197, 183, 45) 0%, rgb(197, 183, 45) 12.5%,rgb(177, 167, 44) 12.5%, rgb(177, 167, 44) 25%,rgb(158, 152, 44) 25%, rgb(158, 152, 44) 37.5%,rgb(138, 136, 43) 37.5%, rgb(138, 136, 43) 50%,rgb(118, 121, 42) 50%, rgb(118, 121, 42) 62.5%,rgb(98, 105, 41) 62.5%, rgb(98, 105, 41) 75%,rgb(79, 90, 41) 75%, rgb(79, 90, 41) 87.5%,rgb(59, 74, 40) 87.5%, rgb(59, 74, 40) 100%);
 }
 .showcase{
     background: url('./assets/images/Rally-Images/IMG-20200216-WA0024.jpg') no-repeat center center/cover;
     width: 100%;
-    height: 80vh;
+    height: 60vh;
     position: relative;
     display: flex;
     align-items: center;
@@ -25,7 +27,17 @@
     /* box shadow increases the density of the shadow */
 }
 h1, h2{
-    color: #fff;
     z-index: 5;
+}
+.heading{
+ background: linear-gradient( 45.34deg, #EA52F8 5.66%, #0066FF 94.35%);
+ -webkit-background-clip: text;
+ -moz-background-clip: text ;
+ background-clip: text;
+ -webkit-text-fill-color: transparent;
+}
+.color{
+    width: 200px;
+    height: 200px;
 }
 
