--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@
 .showcase{
     background: url('./assets/images/Rally-Images/IMG-20200216-WA0024.jpg') no-repeat center center/cover;
     width: 100%;
-    height: 60vh;
+    height: 75vh;
     position: relative;
     display: flex;
     align-items: center;
@@ -40,4 +40,38 @@ h1, h2{
     width: 200px;
     height: 200px;
 }
+.rowe {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+  }
+  
+  /* Create four equal columns that sits next to each other */
+  .column {
+    flex: 25%;
+    max-width: 25%;
+    padding: 0 4px;
+  }
+  
+  .column img {
+    margin-top: 8px;
+    vertical-align: middle;
+    width: 100%;
+  }
+  
+  /* Responsive layout - makes a two column-layout instead of four columns */
+  @media screen and (max-width: 800px) {
+    .column {
+      flex: 50%;
+      max-width: 50%;
+    }
+  }
+  
+  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+  @media screen and (max-width: 600px) {
+    .column {
+      flex: 100%;
+      max-width: 100%;
+    }
+  }
 
