--- a/main.css
+++ b/main.css
@@ -39,6 +39,10 @@
       rgb(59, 74, 40) 87.5%,
       rgb(59, 74, 40) 100%
     );
+    
+}
+body{
+  background-color: #f6f6f6;
 }
 /* HERO_SECTION */
 .showcase {
@@ -67,12 +71,19 @@
   /* box shadow increases the density of the shadow */
 }
 /* TYPOGRAPHY */
-section p {
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  font-weight: 400;
-  font-style: normal;
+h1,h2,h3,h4,h5 {
+  font-family: "Simonetta", "ubuntu";
 }
+p{
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
+font-weight: 400;
+font-style: normal;
+margin-top: 30px;
+font-size: 17px;
+line-height: 1.7;
+max-width: 42em;
+}
+
 h1,
 h2 {
   z-index: 5;
@@ -89,13 +100,51 @@ h2 {
   width: 200px;
   height: 200px;
 }
-/* FOOTer-STYLING */
+/* FOOTER-STYLING */
+
 .footer {
   background: #343a40;
+  position: relative;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  height: 200px;
 }
 .footer p {
   color: rgba(255, 255, 255, 0.75);
 }
+/* SCROLL UP STLYINHG */
+.up{
+  position: absolute;
+  width: 5rem;
+  height: 5rem;
+  background-color: #eee;
+  top: -2.5rem;
+  right: 5rem;
+  border-radius: 100%;
+  right: 5rem;
+  display: flex;
+  animation: pulse 2s infinite;
+  cursor: pointer;
+}
+.up i{
+  color: #16162d;
+  font-size: 1rem;
+  margin: auto;
+}
+/* BUTTON TRANSITION */
+@keyframes pulse {
+  0%{
+      box-shadow: 0 0 0 0 rgba(253, 87, 191, 0.99);
+  }
+  70%{
+      box-shadow: 0 0 0 2rem rgba(253, 87, 191, 0);
+  }
+  100%{
+      box-shadow: 0 0 0 0 rgba(253, 87, 191, 0);
+  }
+}
+
 
 /* GRID STYLING  */
 .horizontal {
@@ -132,7 +181,7 @@ h2 {
     max-width: 100%;
   }
 }
-/* scroll up button styling */
+/* copyright */
 .copyright{
 width: 100%;
 padding: 2rem 0;
@@ -140,21 +189,4 @@ text-align: center;
 background-color: #16162d;
 position: relative;
 }
-.up{
-  position: absolute;
-  width: 5rem;
-  height: 5rem;
-  background-color: #eee;
-  top: -2.5rem;
-  right: 5rem;
-  border-radius: 100%;
-  right: 5rem;
-  display: flex;
-  animation: pulse 2s infinite;
-  cursor: pointer;
-}
-.up i{
-  color: #16162d;
-font-size: 2rem;
-margin: auto;
-}
+
